--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <input id="ExpirationYear" type="number" placeholder="YY" min="2018" max="2030" required>
             </div>
             <label for="CVC">CVC</label>
-            <input id="CVC" type="number" placeholder="e.g.123" maxlength="3" required>
+            <div class="CVC">
+                <input id="CVC" type="number" placeholder="e.g.123" maxlength="3" required>
+            </div>
             <button type="submit" class="submit">Confirm</button>
         </section>
     </main>
