--- a/index.html
+++ b/index.html
@@ -14,22 +14,35 @@
 
 <body>
     <main class="container">
-        <section class="dadosPessoais">
+        <div class="background">
+            <img src="assets/images/bg-main-desktop.png">
+        </div>
+        <form class="dadosPessoais">
             <label for="CardName">CARDHOLDER NAME</label>
             <input id="CardName" type="text" placeholder="e.g.Jane Appleseed" required>
             <label for="CardNumber">CARDHOLDER NAME</label>
             <input id="CardNumber" type="text" placeholder="e.g.1234 5678 9123 0000" maxlength="16" required>
-            <label for="ExpirationDate">EXP.DATE (MM/YY)</label>
-            <div class="ExpirationDate">
-                <input id="ExpirationMonth" type="number" placeholder="MM" min="1" max="12" required>
-                <input id="ExpirationYear" type="number" placeholder="YY" min="2018" max="2030" required>
-            </div>
-            <label for="CVC">CVC</label>
-            <div class="CVC">
-                <input id="CVC" type="number" placeholder="e.g.123" maxlength="3" required>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="ExpirationDate">EXP.DATA (MM/YY)</label>
+                    <div class="ExpirationDate">
+                        <input id="ExpirationMonth" type="number" placeholder="MM" min="1" max="12" required>
+                        <input id="ExpirationYear" type="number" placeholder="YY" min="2020" max="2030" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="CVC">CVC</label>
+                    <div class="CVC">
+                        <input id="CVC" type="number" placeholder="e.g.123" maxlength="3" required>
+                    </div>
+                </div>
             </div>
             <button type="submit" class="submit">Confirm</button>
-        </section>
+        </form>
+        <div class="img">
+            <img src="assets/images/bg-card-front.png">
+            <img src="assets/images/bg-card-back.png">
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
